--- a/.github/auto_assign.yml
+++ b/.github/auto_assign.yml
@@ -16,8 +16,8 @@ useReviewGroups: true
 # A list of reviewers, split into different groups, to be added to pull requests (GitHub user name)
 reviewGroups:
   groupA:
-    - reviewerA
-    - reviewerB
+    - OsamaAbdellateef
+    - sebald
     - reviewerC
   groupB:
     - reviewerD
