--- a/.github/auto_assign.yml
+++ b/.github/auto_assign.yml
@@ -4,7 +4,7 @@
 addReviewers: true
 
 # Set to true to add assignees to pull requests
-addAssignees: false
+addAssignees: true
 
 # A number of reviewers added to the pull request
 # Set 0 to add all the reviewers (default: 0)
